--- a/MangaScraper.cabal
+++ b/MangaScraper.cabal
@@ -16,11 +16,34 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                       , Scraper
   build-depends:       base >= 4.7 && < 5
                      , aeson
+                     , text
                      , servant-server
                      , wai
                      , warp
+                     , tagsoup
+                     , wreq
+                     , HTTP
+                     , transformers
+                     , conduit
+                     , data-default
+                     , http-client
+                     , http-client-tls
+                     , http-types
+                     , scalpel
+                     , webdriver
+                     , bytestring
+                     , lens
+                     , directory
+                     , async
+                     , path
+
+                     
+                     
+
+                     
   default-language:    Haskell2010
 
 executable MangaScraper-exe
