--- a/MangaScraper.cabal
+++ b/MangaScraper.cabal
@@ -16,7 +16,10 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
-                       , Scraper
+                     , Scraper
+                     , Manga
+                     , ScraperData
+                     , DownloadChapter
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , text
@@ -46,6 +49,7 @@ library
                      , transformers-base
                      , monad-control
                      , call-stack
+                     , monad-parallel
                      
 
                      
@@ -57,7 +61,7 @@ library
 executable MangaScraper-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N 
   build-depends:       base
                      , MangaScraper
   default-language:    Haskell2010
