--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,11 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-13.8
+resolver: lts-21.7
+
+system-ghc: true
+nix:
+  enable: false
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
